[tool.poetry]
name = "pyrgbd"
version = "0.1.0"
description = ""
authors = ["Hanseul Jun <hanseul@telegie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.23.2"
pyglm = "^2.6.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"

[build-system]
requires = ["setuptools", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"
