[tool.poetry]
name = "pyrgbd"
version = "0.1.0"
description = ""
authors = ["Hanseul Jun <hanseul@telegie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.23.2"
pyglm = "^2.6.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"

[tool.cibuildwheel]
build = ["cp311-*", "*-macosx_x86_64", "*-manylinux_x86_64"]
skip = [
    "cp36-*",
    "cp37-*",
    "cp38-*",
    "cp39-*",
    "cp310*",
    "pp*",
    "*-win32",
    "*-win_amd64",
    "*-win_arm64",
    "*musllinux*",
    "*linux_i686",
    "*linux_aarch64",
    "*linux_ppc64le",
    "*linux_s390x",
]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
manylinux-x86_64-image = "manylinux_2_28"

before-build = [
    "pip install ninja",
    "python3 bootstrap.py"
]
build-verbosity = 3

[build-system]
requires = ["setuptools", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"
