[tool.poetry]
name = "pyrgbd"
version = "0.1.0"
description = ""
authors = ["Hanseul Jun <hanseul@telegie.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
cffi = "^1.15.1"
numpy = "^1.23.2"
opencv-python = "^4.6.0"
requests = "^2.28.1"
scipy = "^1.9.3"
typing-extensions = "^4.4.0"
pyglm = "^2.6.0"

[tool.poetry.dev-dependencies]
build = "^0.8.0"

[tool.poetry.group.dev.dependencies]
types-cffi = "^1.15.1.4"
mypy = "^0.991"
types-requests = "^2.28.11.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
